--- a/src/assets/sass/custom/_blog.scss
+++ b/src/assets/sass/custom/_blog.scss
@@ -29,7 +29,8 @@
     article {
         width: 100%;
         img {
-            max-width: 100% !important;
+            max-width: 100%;
+            height: auto;
         }
         a {
             overflow-wrap: break-word;
