--- a/src/assets/sass/custom/_blog.scss
+++ b/src/assets/sass/custom/_blog.scss
@@ -31,6 +31,8 @@
         img {
             max-width: 100%;
             height: auto;
+            margin: 1.5rem auto;
+            display: block;
         }
         a {
             overflow-wrap: break-word;
