updated projects page

--- a/src/templates/projects.njk
+++ b/src/templates/projects.njk
@@ -55,45 +55,40 @@
                     <br>
 
                     <h3 class="major">Interactive displays</h3>
-                    <p>Demo reel of several interactive displays developed by Packet39 team members. Detection is
-                        done using cameras and thermal sensors. Effects play in a powerful and customizable XNA
-                        framework. Most effects can be stacked and combined. An editor allowed our client to create
+                    <p>Demo reel of interactive displays and applicaitons we have developed over the past decade. Detection is
+                        done using cameras and computer vision. Effects play in a powerful and customizable 3D
+                        framework. Most effects can be stacked and combined. An editor allowed our clients to create
                         unique experiences with their own graphics and media.</p>
 
 
                 </article>
                 <article>
                     <div class="intrinsicContainer">
-                        <div class="youtubePlayer" data-id="0ND8xQoi4yg" data-name="Laser Cutter / Engraver"></div>
+                        <div class="youtubePlayer" data-id="v0rgemJKQdY" data-name="Airlock simulator and trainer"></div>
                     </div>
                     <br>
 
-                    <h3 class="major">Custom built laser cutter / engraver</h3>
-                    <p>This custom laser engraver can cut paper, vinyl, plastics, foam or thin wood sheets. It can
-                        engrave most non-metal materials. Sporting a 3.8W blue diode laser and a 32bit control
-                        board, it can handle any complex cutting job you throw at it. Built with a bottom-less
-                        design allowing working any surface or part, even parts that are bigger than the unit
-                        itself.</p>
+                    <h3 class="major">Airlock simulator and trainer</h3>
+                    <p>A power plant airlock system that we modeled and simulated in VR, for training new employees. This system helps
+                    workers get familiar with the procedure required to enter and exit the airlock, and will simulate the cramped
+                    conditions inside to test for claustrophobe or stress response. Runs on the HTC Vive.</p>
 
 
                 </article>
 
                 <article>
-                    <div class="intrinsicContainer">
-                        <div class="intrinsicWrapper">
-                            <img
-                                    src="{{ imagePath }}/3d_print.jpg"
-                                    alt="High resolution 3D printer example"
-                                    title="High resolution 3D printer example"
-                            />
-                        </div>
-                    </div>
-                    <br>
 
-                    <h3 class="major">High resolution 3D print</h3>
-                    <p>3D printed on our high resolution 3D printer, this model can fit on a penny. The printer was
-                        built in our lab and sports a maximum resolution of 40 micron on the XY axis and 20 on the
-                        Z. Castable resin is also available, for creating metal objects.</p>
+                <div class="intrinsicContainer">
+                    <div class="youtubePlayer" data-id="EHTkI5ZM91U" data-name="Work planning"></div>
+                </div>
+                <br>
+
+                <h3 class="major">4D work scheduling</h3>
+                <p>This system connects to the plant's work planning and scheduling database. It uses a combination of 3D scanned
+                environments and CAD files to recreate work locations and gives the user an option to move time forwards and backwards, to visualize
+                how the work progresses. This allows the work manager to detect conflicts in resources and space ahead of time.
+                In this particular example, it was discovered that the crane would need to be assembled inside the room,
+                as it doesn't fit through the door.</p>
 
                 </article>
 
