--- a/src/templates/projects.njk
+++ b/src/templates/projects.njk
@@ -18,11 +18,11 @@
             <section class="features">
                 <article>
                     <div class="intrinsicContainer">
-                        <div class="youtubePlayer" data-id="htp0rUHSunw" data-name="Gieger Counter Training"></div>
+                        <div class="youtubePlayer" data-id="htp0rUHSunw" data-name="Geiger Counter Training"></div>
                     </div>
                     <br>
 
-                    <h3 class="major">Gieger Counter - Virtual Reality training</h3>
+                    <h3 class="major">Geiger Counter - Virtual Reality training</h3>
                     <p>Training and testing on the usage of a hand-held radiation detector. <br><br>We developed this VR application for the Pickering nuclear power plant. An operator places a virtual radiation source on the table and the trainee has to find it. A mathematical model, in conjuction with a physical simulation, results in a highly accurate and responsive virtual Geiger counter. This test can be conducted in an office or even at home, without expensive equipment and without exposing trainees to a harmful radiation.
                     </p>
 
@@ -31,12 +31,40 @@
 
                 <article>
                     <div class="intrinsicContainer">
+                        <div class="youtubePlayer" data-id="v0rgemJKQdY" data-name="Airlock simulator and trainer"></div>
+                    </div>
+                    <br>
+
+                    <h3 class="major">Airlock simulator and trainer</h3>
+                    <p>A power plant airlock system that we modeled and simulated in VR, for training new employees. This system helps
+                    workers get familiar with the procedure required to enter and exit the airlock, and will simulate the cramped
+                    conditions inside to test for claustrophobe or stress response. Runs on the HTC Vive.</p>
+
+
+                </article>
+
+                <div class="intrinsicContainer">
+                    <div class="youtubePlayer" data-id="EHTkI5ZM91U" data-name="Work planning"></div>
+                </div>
+                <br>
+
+                <h3 class="major">4D work scheduling</h3>
+                <p>This system connects to the plant's work planning and scheduling database. It uses a combination of 3D scanned
+                environments and CAD files to recreate work locations and gives the user an option to move time forwards and backwards, to visualize
+                how the work progresses. This allows the work manager to detect conflicts in resources and space ahead of time.
+                In this particular example, it was discovered that the crane would need to be assembled inside the room,
+                as it doesn't fit through the door.</p>
+
+                </article>
+                
+                <article>
+                    <div class="intrinsicContainer">
                         <div class="youtubePlayer" data-id="P7X9AR5KecE" data-name="Augmented Reality Business Card"></div>
                     </div>
                     <br>
 
-                    <h3 class="major">Augmented Reality Buisness Card</h3>
-                    <p>We spruced up our Packet39 Buisness cards with some Augmented Reality magic. Realtime digital
+                    <h3 class="major">Augmented Reality Business Card</h3>
+                    <p>We spruced up our Packet39 Business cards with some Augmented Reality magic. Realtime digital
                         3D graphics overlay, attached to a physical object. If you want to try it yourself, <a
                                 href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0" title="Augmented Reality Business card App">download
                             the app</a>
@@ -55,42 +83,18 @@
                     <br>
 
                     <h3 class="major">Interactive displays</h3>
-                    <p>Demo reel of interactive displays and applicaitons we have developed over the past decade. Detection is
+                    <p>Demo reel of interactive displays and applications we have developed over the past decade. Detection is
                         done using cameras and computer vision. Effects play in a powerful and customizable 3D
                         framework. Most effects can be stacked and combined. An editor allowed our clients to create
                         unique experiences with their own graphics and media.</p>
 
 
                 </article>
-                <article>
-                    <div class="intrinsicContainer">
-                        <div class="youtubePlayer" data-id="v0rgemJKQdY" data-name="Airlock simulator and trainer"></div>
-                    </div>
-                    <br>
 
-                    <h3 class="major">Airlock simulator and trainer</h3>
-                    <p>A power plant airlock system that we modeled and simulated in VR, for training new employees. This system helps
-                    workers get familiar with the procedure required to enter and exit the airlock, and will simulate the cramped
-                    conditions inside to test for claustrophobe or stress response. Runs on the HTC Vive.</p>
-
-
-                </article>
 
                 <article>
 
-                <div class="intrinsicContainer">
-                    <div class="youtubePlayer" data-id="EHTkI5ZM91U" data-name="Work planning"></div>
-                </div>
-                <br>
 
-                <h3 class="major">4D work scheduling</h3>
-                <p>This system connects to the plant's work planning and scheduling database. It uses a combination of 3D scanned
-                environments and CAD files to recreate work locations and gives the user an option to move time forwards and backwards, to visualize
-                how the work progresses. This allows the work manager to detect conflicts in resources and space ahead of time.
-                In this particular example, it was discovered that the crane would need to be assembled inside the room,
-                as it doesn't fit through the door.</p>
-
-                </article>
 
                 <article>
                     <div class="intrinsicContainer">
