--- a/src/templates/projects.njk
+++ b/src/templates/projects.njk
@@ -12,8 +12,9 @@
         <div class="inner">
             <h1 class="major">Projects</h1>
             <p>We are a team of professional software developers and academics, working together to provide
-                software & hardware solutions. We thrive in the space between code and the physical world and we
-                develop solutions that sense, manipulate and move around in the environment. </p>
+                custom Virtual Reality and Augmented Reality solutions. We specialize in safety and training applications for the
+                manufacturing, power and aerospace industries. We prefer using the HTC Vive and many of our projects include
+                custom built hardware that mimics or simulates real-world equipment or devices.  </p>
             <p>
             <section class="features">
                 <article>
@@ -23,7 +24,12 @@
                     <br>
 
                     <h3 class="major">Geiger Counter - Virtual Reality training</h3>
-                    <p>Training and testing on the usage of a hand-held radiation detector. <br><br>We developed this VR application for the Pickering nuclear power plant. An operator places a virtual radiation source on the table and the trainee has to find it. A mathematical model, in conjuction with a physical simulation, results in a highly accurate and responsive virtual Geiger counter. This test can be conducted in an office or even at home, without expensive equipment and without exposing trainees to a harmful radiation.
+                    <p>Training and testing on the usage of a hand-held radiation detector. <br><br>
+                    We developed this VR application for the Pickering nuclear power plant. An operator places a
+                    virtual radiation source on the table and the trainee has to find it. A mathematical model,
+                    in conjunction with a physical simulation, results in a highly accurate and responsive virtual
+                    Geiger counter. This test can be conducted in an office or even at home, without expensive equipment
+                    and without exposing trainees to a harmful radiation.
                     </p>
 
 
