--- a/src/templates/the-team.njk
+++ b/src/templates/the-team.njk
@@ -23,8 +23,8 @@
                         Sears, GE and Mazda.</p>
                     <p>
                         Shachar usually goes by Vice, and is also a tinkerer, maker, 3d printing enthusiast and
-                        photographer. Follow some of his projects on his blog <a
-                                href="http://CallMeVice.com" target="_blank" title="CallMeVice.com Website">CallMeVice.com</a>
+                        photographer. Follow some of Shachar's projects on our blog: <a
+                                href="http://Packet39.com/Blog" target="_blank" title="Packet39 blog">Packet39.com/Blog</a>
                     </p>
 
 
@@ -39,7 +39,7 @@
                         and industrial fields. Lena's publications can be found on her website, <a
                                 href="http://www.csd.uwo.ca/~ygorelic/" target="_blank" title="Lena's Publications">csd.uwo.ca/~ygorelic/</a></p>
                     <p>
-                        Lena is also an artist and a jeweler, she has an <a
+                        Lena is also an artist and a jeweler, has an <a
                                 href="https://lenagorelick.wordpress.com/" target="_blank" title="Lena's Art Blog">art blog</a> and an Etsy store called <a
                                 href="https://nunandnoot.etsy.com/" target="_blank" title="Lena's Etsy Store">Nun&amp;Noot</a>.</p>
                 </article>
@@ -55,7 +55,7 @@
                 <article>
                     <div class="image"><img src="{{ imagePath }}/nick.png" alt="Nicholas Hyland profile photo" title="Nicholas Hyland profile photo"/></div>
                     <h3 class="major">Nicholas Hyland</h3>
-                    <p> Nicholas Hylands is a freelance technical artist, studying video game design at Fanshawe College (Class of 2018). Nicholas has a large passion for creating art and problem solving.</p>
+                    <p> Nicholas Hylands is a freelance technical artist, graduated from Fanshawe College (video game design). Nick has a passion for creating art and problem solving.</p>
                 </article>
 
 
