--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -32,7 +32,9 @@
             <h2 class="major">Virtual Reality</h2>
             <p>We design and develop Virtual Reality, Augmented Reality and Mixed Reality games and experiences.</p>
             <p>We can build your idea, or help you refine it. We can deliver games or applications for Google
-                Cardboard, Daydream, Samsung GearVR, HTC Vive or the Oculus Rift.</p>
+                Cardboard, Daydream, Samsung GearVR, HTC Vive or the Oculus Rift.
+
+                We specialize in safety and training applications for the manufacturing, power and aerospace industries.</p>
         </div>
     </div>
 </section>
