--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -32,7 +32,7 @@
             <h2 class="major">Virtual Reality</h2>
             <p>We design and develop Virtual Reality, Augmented Reality and Mixed Reality games and experiences.</p>
             <p>We can build your idea, or help you refine it. We can deliver games or applications for Google
-                Cardboard, Daydream, Samsung GearVR, HTC Vive or the Oculus Rift.
+                Cardboard, Daydream, Samsung GearVR, Oculus Rift, Windows MR or the HTC Vive (our preferred platform).
 
                 We specialize in safety and training applications for the manufacturing, power and aerospace industries.</p>
         </div>
@@ -42,7 +42,7 @@
 
 <section class="wrapper spotlight style1">
     <div class="inner">
-        <img src="{{ imagePath }}/pewpew.png" alt="Augmented realited demo of Alien Attack" title="Augmented realited demo of Alien Attack" class="image"/>
+        <img src="{{ imagePath }}/pewpew.png" alt="Augmented Reality demo of Alien Attack" title="Augmented Reality demo of Alien Attack" class="image"/>
         <div class="content">
             <h2 class="major">Augmented Reality</h2>
             <p>Bring to life static everyday objects, from business cards, to books, magazines, brochures and
@@ -50,7 +50,7 @@
                 extend your marketing materials.</p>
             <p>Try it yourself, download our AR apps from the links below (Android only). Run the app and point
                 your smartphone camera at one of our cards. If you don't have any, you can download and print
-                our <a href="http://packet39.com/assets/images/BizCard.png" target="_blank" title="Business card download">buisness
+                our <a href="http://packet39.com/assets/images/BizCard.png" target="_blank" title="Business card download">business
                     card</a> or the
                 <a href="http://packet39.com/assets/images/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
                     Attack
