--- a/src/templates/accessibility.njk
+++ b/src/templates/accessibility.njk
@@ -1,7 +1,7 @@
 {% set seoData = {
 'pageTitle': 'Accessibility | Packet39',
 'pageDescription' : 'Packet39\'s Accessibility Policy',
-'pageURL' : 'http://packet39.com/accessibility',
+'pageURL' : 'https://packet39.com/accessibility',
 'footerDirection' : ''
 } %}
 
