--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -1,7 +1,7 @@
 {% set seoData = {
     'pageTitle': 'Packet39 | Virtual & Augmented Reality, Custom Solutions',
     'pageDescription' : 'We develop custom software and hardware solutions, Virtual Reality, Augmented Reality, computer vision and image processing applications for your needs.',
-    'pageURL' : 'http://packet39.com/',
+    'pageURL' : 'https://packet39.com/',
     'footerDirection' : 'alt'
 }%}
 
@@ -50,9 +50,9 @@
                 extend your marketing materials.</p>
             <p>Try it yourself, download our AR apps from the links below (Android only). Run the app and point
                 your smartphone camera at one of our cards. If you don't have any, you can download and print
-                our <a href="http://packet39.com/assets/images/BizCard.png" target="_blank" title="Business card download">business
+                our <a href="https://packet39.com/assets/images/BizCard.png" target="_blank" title="Business card download">business
                     card</a> or the
-                <a href="http://packet39.com/assets/images/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
+                <a href="https://packet39.com/assets/images/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
                     Attack
                     game card</a>.
             </p>
