--- a/src/templates/projects.njk
+++ b/src/templates/projects.njk
@@ -1,7 +1,7 @@
 {% set seoData = {
 'pageTitle': 'Projects | Packet39',
 'pageDescription' : 'Discover some of the custom software and hardware solutions developed by Packet39 to suit your needs.',
-'pageURL' : 'http://packet39.com/projects',
+'pageURL' : 'https://packet39.com/projects',
 'footerDirection' : 'alt'
 }%}
 
