--- a/src/templates/sitemap.njk
+++ b/src/templates/sitemap.njk
@@ -1,7 +1,7 @@
 {% set seoData = {
 'pageTitle': 'Privacy Policy | Packet39',
 'pageDescription' : 'Packet39\'s Privacy Policy',
-'pageURL' : 'http://packet39.com/privacy',
+'pageURL' : 'https://packet39.com/sitemap',
 'footerDirection' : ''
 } %}
 
