--- a/src/templates/the-team.njk
+++ b/src/templates/the-team.njk
@@ -1,7 +1,7 @@
 {% set seoData = {
 'pageTitle': 'The Team | Packet39',
 'pageDescription' : 'Learn more about those behind Packet39',
-'pageURL' : 'http://packet39.com/the-team',
+'pageURL' : 'https://packet39.com/the-team',
 'footerDirection' : 'alt'
 }%}
 
@@ -24,7 +24,7 @@
                     <p>
                         Shachar usually goes by Vice, and is also a tinkerer, maker, 3d printing enthusiast and
                         photographer. Follow some of Shachar's projects on our blog: <a
-                                href="http://Packet39.com/Blog" target="_blank" title="Packet39 blog">Packet39.com/Blog</a>
+                                href="https://packet39.com/blog" target="_blank" title="Packet39 blog">Packet39.com/Blog</a>
                     </p>
 
 
@@ -40,8 +40,8 @@
                                 href="http://www.csd.uwo.ca/~ygorelic/" target="_blank" title="Lena's Publications">csd.uwo.ca/~ygorelic/</a></p>
                     <p>
                         Lena is also an artist and a jeweler, has an <a
-                                href="https://lenagorelick.wordpress.com/" target="_blank" title="Lena's Art Blog">art blog</a> and an Etsy store called <a
-                                href="https://nunandnoot.etsy.com/" target="_blank" title="Lena's Etsy Store">Nun&amp;Noot</a>.</p>
+                                href="https://lenagorelick.wordpress.com" target="_blank" title="Lena's Art Blog">art blog</a> and an Etsy store called <a
+                                href="https://www.etsy.com/shop/nunandnoot/" target="_blank" title="Lena's Etsy Store">Nun&amp;amp;Noot</a>.</p>
                 </article>
 
                 <article>
@@ -49,7 +49,7 @@
                     <h3 class="major">Hossam Issacs</h3>
                     <p> Hossam is doing his post-doctorate at the Computer Science Department at the University of
                         Western Ontario, London, Canada. Publications and CV can be found on Hossam's website: <a
-                                href="http://www.hisack.com/" target="_blank" title="Hossam's Website">hisack.com</a></p>
+                                href="http://www.hossamisack.com/" target="_blank" title="Hossam's Website">hisack.com</a></p>
                 </article>
 
                 <article>
