--- a/src/assets/sass/custom/_blog.scss
+++ b/src/assets/sass/custom/_blog.scss
@@ -92,6 +92,9 @@
 .entry-title {
     margin-bottom: 0.5rem;
 }
+.entry-content > div {
+    max-width: 100% !important;
+}
 
 .widget_recent_entries {
     ul {
