--- a/src/assets/sass/custom/_blog.scss
+++ b/src/assets/sass/custom/_blog.scss
@@ -3,6 +3,7 @@
         padding: 2em 0;
 
     }
+
     #footer {
 
         .copyright {
@@ -10,10 +11,12 @@
         }
     }
 }
+
 #blogContainer {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+
     .blogWrapper {
         width: 60%;
         flex: 3 1 60%;
@@ -21,19 +24,23 @@
             padding-right: 2em;
         }
     }
+
     .sidebarWrapper {
         max-width: 280px;
         min-width: 280px;
         flex: 1 1 30%;
     }
+
     article {
         width: 100%;
+
         img {
             max-width: 100%;
             height: auto;
             margin: 1.5rem auto;
             display: block;
         }
+
         a {
             overflow-wrap: break-word;
             word-wrap: break-word;
@@ -42,15 +49,18 @@
             hyphens: auto;
         }
     }
+
     .read-more {
         margin-top: 1.5rem;
         display: inline-block;
     }
+
     .embed-container, .embed-youtube, .sketchfab-embed-wrapper {
         position: relative;
         width: 100%;
         height: 0;
         padding-bottom: 56.25%;
+
         iframe, object, embed {
             position: absolute;
             top: 0;
@@ -59,19 +69,23 @@
             height: 100%;
         }
     }
+
     .sketchfab-embed-wrapper {
         margin-bottom: 3rem;
+
         > p {
             position: absolute;
             bottom: -0.5rem;
-            transform: translate(0,100%);
+            transform: translate(0, 100%);
         }
     }
+
     .author-avatar img {
         max-width: 3.5rem;
         height: auto;
         border-radius: 50%;
     }
+
     .author-description {
         margin: 0 auto;
         max-width: 30rem;
@@ -82,13 +96,16 @@
     .next, .prev {
         margin: 0 1em;
     }
+
     .page-numbers {
         margin: 0 0.25em;
     }
 }
+
 .entry-header {
     padding-bottom: 1.5rem;
 }
+
 .entry-title {
     margin-bottom: 0.5rem;
 }
@@ -103,59 +120,74 @@
         margin: 0;
         padding-left: 0;
     }
+
     li {
         margin: 0;
         padding: 0.75rem 0;
         border-bottom: 1px solid grey;
+
         &:first-child {
             border-top: 1px solid grey;
         }
     }
+
     .post-date {
         font-size: 0.75rem;
         display: block;
+
         &:before {
             content: '-';
             padding-right: 0.5rem
         }
     }
 }
+
 #comments ol.comment-list {
     padding-left: 0;
     list-style: none;
+
     .pingback {
         display: none;
     }
+
     .comment {
         margin-bottom: 1rem;
+
         &:nth-child(even) {
             background-color: _palette(bg);
         }
 
         &:nth-child(odd) {
-            background-color: saturate(_palette(bg),10%);
+            background-color: saturate(_palette(bg), 10%);
         }
+
         .comment-meta + p {
             clear: both;
         }
+
         .children {
             list-style: none;
             padding-left: 0;
+
             li {
                 padding-left: 0.5rem;
                 border-left: 3px solid white;
+
                 &:last-child {
                     margin-bottom: 0;
                 }
             }
+
             &:last-child {
                 margin-bottom: 0;
             }
         }
+
         &.parent {
             padding-bottom: 0.5rem;
         }
     }
+
     .avatar {
         max-width: 3.5rem !important;
         float: left;
