--- a/src/templates/layouts/layout.twig
+++ b/src/templates/layouts/layout.twig
@@ -21,14 +21,27 @@
         document.getElementById('html').classList.add('no-fonts');
     </script>
     <script>
-        window.ga = window.ga || function () {
-                (ga.q = ga.q || []).push(arguments);
-            };
-        ga.l = +new Date;
-        ga('create', 'UA-80992066-1', 'auto');
+        (function(i,s,o,g,r,a,m){
+            i['GoogleAnalyticsObject']=r;
+            i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},
+                i[r].l=1*new Date();
+            a=s.createElement(o),m=s.getElementsByTagName(o)[0];
+            a.async=1;
+            a.src=g;
+            m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-135140120-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-761297127"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-761297127');
+    </script>
 
     <title>{{ seoData['pageTitle'] }}</title>
     <meta name="description"
