--- a/src/templates/layouts/layout.twig
+++ b/src/templates/layouts/layout.twig
@@ -74,6 +74,10 @@
     <style>{{ styleData }}</style>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MGPGWWZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div id="mobileHeader">
     <a href="/" title="Packet39 Home Link" id="mobileLogo" aria-hidden="true">
         <img src="{{ imagePath }}/monochrome-logo.png" alt="Packet39 Monochrome Box Logo" aria-hidden="true" />
