--- a/src/templates/layouts/layout.twig
+++ b/src/templates/layouts/layout.twig
@@ -14,7 +14,7 @@
     <link rel="dns-prefetch" href="https://fonts.googleapis.com"/>
     <link rel="dns-prefetch" href="https://fonts.gstatic.com"/>
     <link rel="dns-prefetch" href="https://use.fontawesome.com"/>
-    <link rel="dns-prefetch" href="https://www.google-analytics.com"/>
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com"/>
     <script type="text/javascript">
         document.getElementById('html').classList.toggle('no-js');
         document.getElementById('html').classList.toggle('js');
@@ -27,13 +27,6 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MGPGWWZ');</script>
     <!-- End Google Tag Manager -->
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'AW-761297127');
-    </script>
 
     <title>{{ seoData['pageTitle'] }}</title>
     <meta name="description"
